--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
+    "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
